--- a/website/ClientApp/src/components/Shared/Header.css
+++ b/website/ClientApp/src/components/Shared/Header.css
@@ -8,15 +8,32 @@
 .menu{
    
     display: flex;
-    margin: 0 auto;
+align-items: center;
+}
+.menu p{
+    padding: 0px 15px;
+    font-size:30px;
+    display: inline-block;
+}
+.menu p:hover{
+    color: rgb(255, 169, 56);
+    
+}
+.menu p:first-child{
+    padding-left: 0px;
+   
+}
+.container_all{
+    margin:0 auto;
+    height: 100%;
+    width: 1100px;
+}.menu_header .container_all {
+   align-items: center;
 }
 .menu_header{
     background-color: rgb(47, 86, 94);
 }
-.menu p{
-    padding: 0px 15px;
-    font-size:20px;
-}
+
 .body_header{
     background-color: rgb(96, 127, 133);
 }
@@ -27,6 +44,8 @@
 .image img{
     width: 100%;
     height: 100%;
+   
+  
 }
 .About_us{
     display: flex;
@@ -35,6 +54,6 @@
    
 }
 .text{
-    font-size: 40px;
+    font-size: 45px;
     width: 50%;
 }
