--- a/website/ClientApp/src/components/MainPage/components/Carousel.css
+++ b/website/ClientApp/src/components/MainPage/components/Carousel.css
@@ -1,17 +1,14 @@
-.image_info img{
-
-    height: 100% !important;
-    width: 100%;
-}
-.image_info {
-display: flex  !important;
-
-    height: 100% !important;
-    width: 100%;
-}
 .content{
-    height: 800px !important;
+    height:600px !important ;
 }
-.slick-slide .slick-active .slick-current{
-    width: 2000px;
+.content .image_info {
+    height: 100%;
+    width: 100%;   
 }
+.content .image_info img{
+
+    height: 100%;
+    width: 100%;
+}
+
+
