--- a/website/ClientApp/src/components/Shared/Header.css
+++ b/website/ClientApp/src/components/Shared/Header.css
@@ -57,3 +57,43 @@
     font-size: 45px;
     width: 50%;
 }
+
+
+
+.topmenu > li {
+    display: block;
+   
+    position: relative;
+  }
+  
+  
+  .submenu {
+    padding: 0;
+    position: absolute;
+    top: 100%;
+    width: 300px;
+    z-index: 3;
+   overflow: hidden;
+  }
+  .submenu  li{
+      font-size: 15px;
+  }
+  .one .submenu {
+      transition: 5s;
+    display: none;
+    border-radius: 10px;
+    background: #025677;
+  }
+  .one ul li:hover .submenu {
+    display: block;
+    transition: 2s;
+  }
+  .one  ul li:hover {
+    color: rgb(147, 225, 255);
+  
+  }
+.one .topmenu .submenu li:hover {
+    
+    background: rgb(106, 80, 255);
+}
+  
