--- a/website/ClientApp/src/components/MainPage/Mainpage.css
+++ b/website/ClientApp/src/components/MainPage/Mainpage.css
@@ -1,15 +1,3 @@
-.slider{
-    width: 100%;
-    height: 900px;
-    background-color: blue;
-    font-size:40px;
-}
-.slider1{
-    background-color: blue;
-}
-.slider2{
-    background-color: red;
-}
-.slider3{
-    background-color: green;
+.main{
+    flex:1  1 auto;
 }
