--- a/website/ClientApp/src/components/MainPage/components/Carousel.css
+++ b/website/ClientApp/src/components/MainPage/components/Carousel.css
@@ -1,13 +1,10 @@
 .content{
-    height: calc(100vh - 270px) ;
+    height: -webkit-fill-available !important;
 }
-.content .image_info {
-    height: 100%;
-    width: 100%;   
-}
-.content .image_info img{
-    height: 100%;
-    width: 100%;
+.image_info img{
+
+    height: 100% !important;
+    width: 100% !important;
 }
 
 
