--- a/website/ClientApp/src/components/Shared/Header.css
+++ b/website/ClientApp/src/components/Shared/Header.css
@@ -52,8 +52,8 @@
     height: 200px;
 }
 .image img{
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
    
   
 }
