--- a/website/ClientApp/src/components/MainPage/Mainpage.css
+++ b/website/ClientApp/src/components/MainPage/Mainpage.css
@@ -2,3 +2,21 @@
     display: flex;
     flex-direction: column;
 }
+.news_preview{
+    width: 100%;
+    height: 10vh;
+    background-color: brown;
+    margin-top: -1vh;
+}
+.news_preview .container_all{
+    display: flex;
+    align-items: center;
+   
+}
+.news_preview .container_all h1{
+    
+    
+    margin: 0 auto;
+    color: white;
+    
+}
