--- a/website/ClientApp/src/components/Shared/Footer.css
+++ b/website/ClientApp/src/components/Shared/Footer.css
@@ -19,6 +19,9 @@
     display: flex;
     flex-direction: column;
 }
+.form_feedback textarea{
+  resize: none;
+}
 .about_footer p{
  
     font-size: 20px;
