--- a/website/ClientApp/src/components/Shared/Menu.css
+++ b/website/ClientApp/src/components/Shared/Menu.css
@@ -20,10 +20,18 @@ Link{
 }
 .topmenu > li {
     display: block;
-   
+   z-index: 100;
     position: relative;
   }
-  
+  .topmenu >li >a{ 
+   text-decoration: none;
+    color: black;
+  }
+  .topmenu li a :hover{
+    
+    text-decoration: none;
+     
+   }
   
   .submenu {
     padding: 0;
@@ -35,6 +43,7 @@ Link{
   }
   .submenu  li{
       font-size: 15px;
+      text-decoration: none;
   }
   .one .submenu {
       transition: 5s;
@@ -47,13 +56,13 @@ Link{
     transition: 2s;
     z-index: 10;
   }
-  .one  ul li:hover {
+  .one  ul li a:hover {
     color: rgb(147, 225, 255);
     text-decoration: none;
   
   }
-.one .topmenu .submenu li:hover {
-    
+.one .topmenu .submenu li a:hover {
+    text-decoration: none;
     background: rgb(106, 80, 255);
 }
   
