--- a/website/ClientApp/src/components/AdminPage/components/News.css
+++ b/website/ClientApp/src/components/AdminPage/components/News.css
@@ -73,6 +73,6 @@
     border-radius: 10px;
     font-weight: 700;
     width: 150px;
-    height: 40px;
+    height: fit-content;
     background-color: rgb(218, 218, 246);
 }
