--- a/website/ClientApp/src/components/Shared/Footer.css
+++ b/website/ClientApp/src/components/Shared/Footer.css
@@ -1,7 +1,7 @@
 .body_footer{
     width: 100%;
     height: 465px;
-     background-color: rgb(96, 127, 133);;
+     background-color: rgb(96, 127, 133);
 }
 .about_footer{
     display: flex;
@@ -30,7 +30,7 @@
 
 .line_footer{
     border:none;
-    background-color: darkblue;
+    background-color: rgb(58, 106, 116);
     height: 2px;
     width: 100%;
     margin: 0;
