--- a/website/ClientApp/src/components/AdminPage/components/News.css
+++ b/website/ClientApp/src/components/AdminPage/components/News.css
@@ -1,7 +1,4 @@
-.one_news{
-    height: fit-content;
-    background-color: cadetblue;
-}
+
 .add_news{
     height: fit-content;
     background: radial-gradient(circle, rgba(222,98,98,1) 0%, rgba(255,184,140,1) 100%);
@@ -63,7 +60,7 @@
     border-radius: 10px;
     width: 500px;
     padding: 10px;
-    background-color: #f8c6c6;
+    background-color: #5eb9e4;
     border: 1px solid rgb(0, 56, 129);
     
 }
@@ -154,7 +151,83 @@
     font-weight: 500;
     color: #fff;
     letter-spacing: 1px;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;  
 }
 
+.admin_all_news{
+    height: fit-content;
+    background: #5b5b7b;
+    padding: 10px 10px 10px 10px ;
+    border-radius: 10px;
+    margin: 30px 0 30px 0;
+    display: grid;
+}
+.one_news{
+    height: fit-content;
+    padding: 20px 0;
+    margin: 20px 0;
+    border-radius: 10px;
+    background-color: #e2c8c8b7;
+}
+.one_news .title_news{
+    font-size: 20px;
+    font-weight: 800;
+    display: flex;
+    place-content: center;
+    color: black;
+
+}
+.one_news .text textarea{
+    margin: 10px;
+    display: block;
+    height: 150px;
+    border-radius: 10px;
+    width: 500px;
+    padding: 10px;
+    background-color: #f8c6c6;
+    border: 1px solid rgb(0, 56, 129);
+    
+}
+.one_news .title_news  input{
+    margin: 10px;
+    display: block;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10px;
+    width: 500px;
+    background-color: #f8c6c6;
+    padding: 10px;
+    border: 1px solid rgb(0, 56, 129); 
+}
+
+.image_in_news img{
+    align-items: flex-start;
+    height: 300px;
+    width: 500px;
+    border-radius: 10px;
+    margin: 10px;
+}
+.shos_with_news{
+    display: flex;
+    justify-content: space-evenly;
+}
+.header_admin_news{
+    display: grid;
+    font-size: 40px;
+    font-weight: 900 ;
+    text-align: center;
+    
+}
+ #done{
+    border-radius: 25px;
+    color:red;
+    background: linear-gradient(135deg,#3a8ffe 0%, #9658fe 100%);
+    border: none;
+    width: 250px;
+    font-size: 24px;
+}
+
+.button_done{
+    display: flex;
+    justify-content: center;
+}
