--- a/website/ClientApp/src/components/MainPage/components/Main_news.css
+++ b/website/ClientApp/src/components/MainPage/components/Main_news.css
@@ -1,18 +1,26 @@
 .grid_news{
     display: grid;
     width: 100%;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 .info_news{
     display: flex;
-    flex-direction: column;
-    
-    padding: 10px 20px;
+    flex-direction: column;  
+}
+.one_news_main{
+    background-color: #E4E4E6;
+    margin: 20px ;
+    padding: 10px;
+    border-radius: 10px;
+    height: 500px;
+    align-items: center;
+    padding-left:20px ;
 }
 .imagen{
-    width: 300px;
-    height: 200px;
+    width: 400px;
+    height: 250px;
     overflow: hidden;
+    
 }
 .imagen img{
     width: 100%;
@@ -25,3 +33,14 @@
     cursor:pointer;
     
 }
+.info_news .news_title_main {
+    height: 100px;
+    display: flex;
+    align-items: center;
+}
+.info_news h3{
+    color:black;
+    font-weight: 800;
+    font-size: 30px;
+}
+
