--- a/website/ClientApp/src/components/Shared/Footer.css
+++ b/website/ClientApp/src/components/Shared/Footer.css
@@ -1,6 +1,9 @@
+a{
+  text-decoration: none;
+}
 .body_footer{
     width: 100%;
-    height: 465px;
+    height: fit-content;
     background: linear-gradient(254deg, rgba(142,158,171,1) 0%, rgba(238,242,243,1) 100%);}
     
 .element_form:focus{
@@ -10,7 +13,8 @@
 .about_footer{
     display: flex;
     justify-content: space-between;
-}
+    padding: 20px 0;
+  }
 .btn{
   margin: 0 auto;
   width: 100%;
@@ -47,10 +51,23 @@ color: azure;
   
 }
 
+.about_us{
+  width: 550px;
+}
 
+.about_us h1{
+  margin: 20px 0 ;
+  font-weight: 800;
+  font-size: 24px;
+  padding: 0;
+}
 
-.about_us p:first-child{
+.about_us p span{
+  font-weight: 700;
+}
+.about_us p{
   padding-top: 25px;
+  font-style: italic;
 }
 .about_footer h3{
   padding-top: 25px;
@@ -58,20 +75,21 @@ color: azure;
 .form_feedback textarea{
   color: black;
   resize: none;
+  height: 100px;
+  border: none;
 }
 .about_footer p{
- 
-    font-size: 20px;
+   
+    font-size: 18px;
     padding: 7px 0;
 }
 
 .line_footer{
     border:none;
-
     background-color: rgb(64, 99, 102);
     height: 3px;
     width: 100%;
-    margin: 20px 0;
+    margin: 25px 0;
 }
 .menu_footer{
     padding: 30px 0;
@@ -89,7 +107,7 @@ color: azure;
 }  
 .social_links{
     display: grid;
-    position: absolute;
+   
     bottom:0;
     width: 100%;
     place-items: center;
