--- a/website/ClientApp/src/components/Shared/Footer.css
+++ b/website/ClientApp/src/components/Shared/Footer.css
@@ -1,8 +1,8 @@
 .body_footer{
     width: 100%;
     height: 465px;
-    background: linear-gradient(254deg, rgba(142,158,171,1) 0%, rgba(238,242,243,1) 100%);}
-    
+     background-color: rgb(96, 127, 133);
+}
 .element_form:focus{
  box-shadow: 0 0 20px 10px cornsilk ;
  border:none;
@@ -21,34 +21,14 @@
 color: azure;
 }
 .element_form{
-  background: linear-gradient(254deg, rgb(202, 202, 202) 0%, rgba(255, 255, 255, 0.972) 100%);
-      /*background-color: rgb(14, 63, 122);*/
+    background-color: rgb(122, 187, 187);
     border-radius: 5px;
     margin: 5px 0;
-    color: black;
 }
 .form_feedback{
     display: flex;
     flex-direction: column;
-    color: black;
 }
-
-.form_feedback input{
-  padding: 3px;
-}
-
-.form_feedback input::placeholder{
-  color: rgb(39, 105, 131);
-  
-}
-
-.form_feedback textarea::placeholder{
-  color: rgb(39, 105, 131);
-  
-}
-
-
-
 .about_us p:first-child{
   padding-top: 25px;
 }
@@ -56,7 +36,6 @@ color: azure;
   padding-top: 25px;
 }
 .form_feedback textarea{
-  color: black;
   resize: none;
 }
 .about_footer p{
@@ -66,10 +45,10 @@ color: azure;
 }
 
 .line_footer{
-    border:none;
-
-    background-color: rgb(64, 99, 102);
+    border:none;  
     height: 3px;
+    background-color: rgb(94, 94, 121);
+    height: 2px;
     width: 100%;
     margin: 20px 0;
 }
