--- a/website/ClientApp/src/components/Speciality/PidpruyemstvoPage/PidpruyemstvoPage.css
+++ b/website/ClientApp/src/components/Speciality/PidpruyemstvoPage/PidpruyemstvoPage.css
@@ -3,25 +3,25 @@
 .table_pidpr{
     margin: 30px;
 }
-table {
-    margin: 30px;
+.table_pidpr table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
     font-size: 20px;
     border-collapse: collapse;
     text-align: center;
     }
-    th, td:first-child {
+    .table_pidpr th, .table_pidpr td:first-child {
     background: #AFCDE7;
     color: white;
     padding: 10px 20px;
     }
-    th, td {
+    .table_pidpr th, .table_pidpr td {
     border-style: solid;
     border-width: 0 1px 1px 0;
     border-color: white;
     }
-    td {
+    .table_pidpr td {
     background: #D8E6F3;
     }
-    th:first-child, td:first-child {
+    .table_pidpr th:first-child, td:first-child {
     text-align: left;
     }
