--- a/website/ClientApp/src/components/NewsPage/NewsPage.css
+++ b/website/ClientApp/src/components/NewsPage/NewsPage.css
@@ -9,10 +9,13 @@
     border-radius: 10px;
 }
 .news_header{
-    background-color: darkgoldenrod;
     align-items: center;
     display: flex;
-    font-size: 18px;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: 700;
+    margin: 20px;
+    
 }
 .news_block .news_title{
     display: block;
@@ -36,14 +39,16 @@
     width: 400px;
     height: 300px;
     margin: 10px;
+     
 }
 .news_block p{
     display: flex;
     flex-direction: row-reverse;
-    margin-right: 10px;
+    margin-right: 30px;
 }
 .text_and_link{
     display: block;
+    margin-left: 30px;
     justify-content: last baseline;
 }
 .link_news{
