--- a/website/ClientApp/src/components/Shared/Header.css
+++ b/website/ClientApp/src/components/Shared/Header.css
@@ -19,7 +19,7 @@
 .container_all{
     margin:0 auto;
     height: 100%;
-    width: 1100px;
+    width: 75%;
 }
 .container_all ul li{
     padding: 0 10px;
