--- a/website/ClientApp/src/components/AdminPage/AdminPage.css
+++ b/website/ClientApp/src/components/AdminPage/AdminPage.css
@@ -3,6 +3,26 @@
     display: flex;
     height: fit-content;
 }
+.admin_title{
+    width: 100%;
+    background-color: rgb(171, 197, 128);
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 60px;
+}
+.admin_menu_title{
+    font-size: 30px;
+    align-items: center;
+    text-align: center;
+    background-color: green;
+    margin-bottom: 20px;
+    
+}
+.admin_title h1{
+    font-size: 32px;
+    text-align: center;
+}
 .menu_admin{
     height: 100vh;
     width: 30%;
@@ -37,10 +57,16 @@
     font-size: 30px;
     padding: 0;
     margin:0;
+    text-align: center;
 }
+
 .main_menu ul li:hover{
     
-    background: cyan;
+    background: rgb(143, 171, 207);
+}
+.sub_menu ul li:hover{
+    
+    background: rgb(143, 171, 207);
 }
 
 .sub_menu ul{
