--- a/website/ClientApp/src/components/AdminPage/AdminPage.css
+++ b/website/ClientApp/src/components/AdminPage/AdminPage.css
@@ -1,15 +1,16 @@
-.all_admin{
+.all_admin {
     width: 100%;
     display: flex;
     height: fit-content;
+   
 }
+
 .admin_title{
     width: 100%;
     background-color: rgb(171, 197, 128);
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 60px;
+    display: grid;
+    place-items: center;
+    height: 10vh;
 }
 .admin_menu_title{
     font-size: 30px;
@@ -24,28 +25,31 @@
     text-align: center;
 }
 .menu_admin{
-    height: 100vh;
+    height: 90vh;
     width: 30%;
-    border:2px solid black;
+   
     display: flex;
 }
 .other_admin{
-    height: 100vh;
+    display: grid;
+    place-items: center;
+    height: 90vh;
     width: 55%;
-    border:2px solid black;
+    border-left: 2px solid black;
+    
 }
 .button_admin{
-    height: 100vh;
+    height: 90vh;
     width: 15%;
-    border:2px solid black;
+   
 }
 .main_menu{
-    border:2px solid rgb(207, 36, 36);
+   border-right: 2px solid black;
     height: 100%;
     width: 50%;
 }
 .sub_menu{
-    border:2px solid rgb(194, 37, 37);
+    
     height: 80%;
     width: 50%;
     margin: auto 0 0;
@@ -78,22 +82,73 @@
     margin:0;
 }
 .button_admin{
+    
     position: relative;
 }
-.loc_btn{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    
-    bottom: 15px;
-    right: 15px;
-}
+
 .select_img{
     display: flex;
     margin: 30px;
 }
-.select_img button{
-   
-  font-size: 20px;
+
+.butn{
+    border-radius: 25px;
+    color:red;
+    background: linear-gradient(135deg,#3a8ffe 0%, #9658fe 100%);
+    border: none;
+    width: 100%;
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
+.popup{
+    
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 65%;
+   
+   
+  
+    
+}
+
+
+.buttons{
+    margin:10px 20px ;
+    position: absolute;
+    bottom:0;
+}
+.background{
+    margin:0 auto;
+    background: rgb(153, 149, 209);
+    position: absolute;
+    bottom: 200px;
+    height: 100px;
+    width: 90%;
+}
+.sub_buttons{
+    width: fit-content;
+    display: flex;
+}
+.background_page1{
+    height:fit-content;
+}
+.elemen_admin{
+    font-size: 25px;
+    width: 600px;
+    margin: 10px 0;
+    color: white;
+    background: rgb(187, 189, 185);
+}
+.admin_page1_info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.elemen_admin_input{
+    height: 70px;
+}
+.elemen_admin_textarea{
+    height: 400px;
+}
