--- a/website/ClientApp/src/components/Shared/Header.css
+++ b/website/ClientApp/src/components/Shared/Header.css
@@ -14,6 +14,8 @@
     margin: 0;
 }
 .About_us{
+    height: 100%;
+    width: 100%;
     align-items: center;
     display: grid;
     place-items: center;
@@ -87,40 +89,94 @@
 
 
 
-.topmenu > li {
-    display: block;
-   
-    position: relative;
-  }
-  
-  
- .one .submenu {
-    padding: 0;
-    position: absolute;
-    top: 100%;
-    width: 300px;
-    z-index: 3;
-   overflow: hidden;
-  }
-  .submenu  li{
-      font-size: 15px;
-  }
-  .one .submenu {
-      transition: 5s;
-    display: none;
-    border-radius: 10px;
-    background: #025677;
-  }
-  .one ul li:hover .submenu {
-    display: block;
-    transition: 2s;
-  }
-  .one  ul li:hover {
-    color: rgb(147, 225, 255);
-  
-  }
-.one .topmenu .submenu li:hover {
-    
-    background: rgb(106, 80, 255);
+@media (max-width: 2561px) { 
+    .About_us{
+        height: 100%;
+        width: 100%;
+    }
+    .text{
+        height: 90%;
+        width: 70%;
+    }
+    .image{
+        height: 90%;
+       width: 17%;
+    }
+    .mainInfo{
+        height: 350px;
+    }
 }
-  
+
+@media (max-width: 1441px) { 
+
+    .text{
+        height: 90%;
+        width: 78%;
+    }
+    .image{
+        height: 90%;
+       width: 20%;
+    }
+    .mainInfo{
+        height: 220px;
+    }
+}
+
+@media (max-width: 1441px) { 
+
+    .text{
+        height: 90%;
+        width: 78%;
+    }
+    .image{
+        height: 90%;
+       width: 20%;
+    }
+    .mainInfo{
+        height: 210px;
+    }
+}
+
+@media (max-width: 769px) { 
+
+    .text{
+        height: 90%;
+        width: 78%;
+    }
+    .image{
+        height: 90%;
+       width: 20%;
+    }
+    .mainInfo{
+        height: 150px;
+    }
+}
+
+@media (max-width: 426px) { 
+
+    .text{
+        height: 90%;
+        width: 78%;
+    }
+    .image{
+        height: 90%;
+       width: 20%;
+    }
+    .mainInfo{
+        height: 80px;
+    }
+}
+
+@media (max-width: 376px) { 
+    .text{
+        height: 95%;
+        width: 78%;
+    }
+    .image{
+        height: 95%;
+       width: 20%;
+    }
+    .mainInfo{
+        height: 75px;
+    }
+}
