--- a/website/ClientApp/src/components/Shared/Menu.css
+++ b/website/ClientApp/src/components/Shared/Menu.css
@@ -40,6 +40,7 @@ Link{
 .one{
   left:0;
   position: relative;
+  width: 100%;
 }
 
 
@@ -170,7 +171,11 @@ Link{
 	stroke-dashoffset: -134;
 	stroke-width: 6;
 }
-
+.topmenu{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
 
 
 @media (max-width: 769px) {
@@ -221,7 +226,7 @@ Link{
   
   
 }
-
+/*
 @media (max-width: 2561px) {
   .container_all ul li{
     color: black;
@@ -243,7 +248,7 @@ Link{
   
    width: fit-content;
  }
-}
+}*/
 
 
 @media (max-width: 1441px) {
@@ -261,6 +266,7 @@ Link{
     height: 50px;
   }
   .container_all{
+    display: flex;
     justify-content: space-between;
   }
  .one{
